brief update to text-align (not correct, fixed in home desktop version

--- a/css/style3.css
+++ b/css/style3.css
@@ -213,6 +213,11 @@ header li {
     margin: 6em auto;
 }
 
+.adventure_kits_section > h2,
+.adventure_kits_section > p {
+    text-align: right;
+}
+
 .adventure_kits_image {
     width: 100%;
     height: 15em;
